# kindle-to-md

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-kindle-to-markdown.md
docs/superpowers/specs/: 2026-03-17-kindle-to-markdown-design.md
examples/: postprocess_quiz.py
kindle_to_md/: __init__.py  browser.py  cli.py  extractor.py  markdown.py  ocr.py
tests/: test_browser.py  test_cli.py  test_extractor.py  test_integration.py  test_markdown.py  test_ocr.py  test_session.py
tests/fixtures/: fake_reader.html
